# string_parsing

./: CMakeLists.txt  main.cpp  simple_id.hpp  simple_id_cstr.hpp  test_tools.hpp
